--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ async function analyzeEmail(){
             </div>
 
             <p class="text-gray-700 mb-4">
-                ${confidence}% confidence this email is 
+                ${confidence.toFixed(2)}% confidence this email is 
                 <strong>${data.label}</strong>.
             </p>
 
